2007-02-04  Adam Schreiber  <sadam@clemson.edu>

    * src/seahorse-keyserver-sync.c:
    * data/seahorse.schemas.in:
    * libseahorse/seahorse-server-source.c:
    * libseahorse/seahorse-prefs.glade:
    * libseahorse/seahorse-ldap-source.c: Fix typo and separate 
    user visible "keyserver" into two words.  Change additional uses of 
    "syncing". Fixes bug #404386

2007-01-31  Adam Schreiber  <sadam@clemson.edu>

    * help/C/seahorse.xml:
    * src/seahorse-key-manager.c: Remove repetitive use of key in menu.
    Fixes bug #396080 
    * help/C/seahorse.xml: Fix typo. Fixes bug #402856
    * src/seahorse-sign.c:
    * src/seahorse-pgp-generate.glade:
    * src/seahorse-keyserver-sync.glade:
    * src/seahorse-keyserver-sync.c:
    * src/seahorse-sign.glade:
    * src/seahorse-key-manager.c:
    * plugins/nautilus/seahorse-tool.c:
    * agent/seahorse-agent-main.c:
    * libseahorse/seahorse-prefs.c:
    * libseahorse/seahorse-signer.glade:
    * libseahorse/seahorse-default-key-control.c:
    * libseahorse/seahorse-default-key-control.h:
    * libseahorse/seahorse-signer.c:
    * libseahorse/seahorse-ssh-operation.c:
    * libseahorse/seahorse-prefs.glade:
    * daemon/seahorse-daemon.c: Fix various string errors. 
    Fixes bug #391666
    * help/C/seahorse.xml:
    * plugins/applet/docs/C/seahorse-applet.xml: Fix build due to 
    gnome-doc-utils change.  Patch from Joseph Sacco. Fixes bug #402921

2007-01-27  Nate Nielsen  <nielsen@memberwebs.com>

    * agent/seahorse-agent-cache.c: Fix crasher during symmetric encryption
    Fixes bug #396009
 
2007-01-25  Nate Nielsen  <nielsen@memberwebs.com>

	* libseahorse/seahorse-add-keyserver.glade:
	* libseahorse/seahorse-secure-entry.c:
	* src/seahorse-add-uid.glade:
	* src/seahorse-change-passphrase.glade:
	* src/seahorse-gkeyring-item-properties.glade:
	* src/seahorse-key-manager.glade:
	* src/seahorse-keyserver-search.glade:
	* src/seahorse-multi-encrypt.glade:
	* src/seahorse-pgp-generate.glade: