@@ -83,55 +83,34 @@ AC_ARG_ENABLE(gpg-check,
 	DO_CHECK=$enableval, DO_CHECK=yes)
 	
 if test	"$DO_CHECK" = "yes"; then
-  major_versions="1"
-  minor_versions="2 4"
+  accepted_versions="1.2 1.4 2.0"
   AC_PATH_PROG(GNUPG, gpg, no)
   ok="no"
   if test "$GNUPG" != "no"; then
-  	AC_MSG_CHECKING(for appropriate GnuPG version)
-	gnupg_version=`$GNUPG --version | grep gpg`
-	major=`echo $gnupg_version | \
+    AC_MSG_CHECKING(for appropriate GnuPG version)
+    gnupg_version=`$GNUPG --version | grep gpg`
+    major=`echo $gnupg_version | \
 		sed 's/^gpg (GnuPG) \([[0-9]]*\)\.\([[0-9]]*\)\.\([[0-9]]*\).*/\1/'`
-	minor=`echo $gnupg_version | \
+    minor=`echo $gnupg_version | \
 		sed 's/^gpg (GnuPG) \([[0-9]]*\)\.\([[0-9]]*\)\.\([[0-9]]*\).*/\2/'`
-	micro=`echo $gnupg_version | \
+    micro=`echo $gnupg_version | \
 		sed 's/^gpg (GnuPG) \([[0-9]]*\)\.\([[0-9]]*\)\.\([[0-9]]*\).*/\3/'`
     
-    for ver in $major_versions; do
-      if test "$ver" = "$major"; then
-            
-        if test "1" = "$major"; then
-          AC_DEFINE(GPG_MAJOR, 1,[GPG Major Version])
-        fi
-        
-        # Check the minor version 
-        for ver2 in $minor_versions; do
-          if test "$ver2" = "$minor"; then
-                    
-            if test "2" = "$minor"; then
-              AC_DEFINE(GPG_MINOR,2,[GPG Minor Version])
-            fi
-            
-            if test "4" = "$minor"; then
-              AC_DEFINE(GPG_MINOR,4,[GPG Minor Version])
-            fi            
-            
-            ok="yes"
-            break
-                    
-          fi
-        done
+    for ver in $accepted_versions; do
+      if test "$ver" = "$major.$minor"; then
+        AC_DEFINE_UNQUOTED(GPG_MAJOR, [$major], [GPG Major Version])
+        AC_DEFINE_UNQUOTED(GPG_MINOR, [$minor], [GPG Minor Version])
+        ok="yes"
         break
-            
       fi
     done
     
   fi
   
   if test "$ok" = "yes"; then
-	AC_MSG_RESULT(yes)
+	AC_MSG_RESULT([yes])
   else
-	AC_MSG_ERROR(Appropriate version of GnuPG not found. Please install version 1.2.x or 1.4.x)
+	AC_MSG_ERROR([Appropriate version of GnuPG not found. Please install one of versions: $accepted_versions])
   fi
 
 fi
