@@ -1,3 +1,12 @@
+2007-02-08  Nate Nielsen  <nielsen@memberwebs.com>
+
+    * configure.in
+    * agent/seahorse-agent-actions.c:
+    * agent/seahorse-agent-io.c:
+    * agent/seahorse-agent.h:
+    * libseahorse/seahorse-gpg-options.c: Fixes for agent interoperability
+    with GPG2. Patch from Alon Bar-Lev. Fixes bug #375062
+
 2007-02-04  Adam Schreiber  <sadam@clemson.edu>
 
     * src/seahorse-keyserver-sync.c:
